# AgentChattrControlPanel

./: .gitignore  AgentChattrControlPanel.code-workspace  README.md  pyproject.toml  requirements.txt  run_acp.bat
src/acp/: main.py
src/acp/core/: agentchattr.py  checks.py  codex_config.py  codex_windows_acl.py  patching.py  processes.py  state.py  toml_config.py  utils.py  workspaces.py
src/acp/core/__pycache__/: agentchattr.cpython-311.pyc.1503107305904  agentchattr.cpython-311.pyc.2617057814560  codex_config.cpython-311.pyc.1794592147328  codex_config.cpython-311.pyc.2278798854016  codex_windows_acl.cpython-311.pyc.1594746341968  codex_windows_acl.cpython-311.pyc.1728060394064  codex_windows_acl.cpython-311.pyc.2174694625712  codex_windows_acl.cpython-311.pyc.2469123983952  state.cpython-311.pyc.1503107331344  state.cpython-311.pyc.2162108043696  state.cpython-311.pyc.2755737258960  toml_config.cpython-311.pyc.1437922155904  toml_config.cpython-311.pyc.1503107310720  toml_config.cpython-311.pyc.2441830598528  toml_config.cpython-311.pyc.2617048150736  toml_config.cpython-311.pyc.2755736851536
src/acp/ui/: ansi.py  async_worker.py  log_bus.py  main_window.py  status_bar.py
src/acp/ui/__pycache__/: main_window.cpython-311.pyc.1503107311616  main_window.cpython-311.pyc.2174694630416  status_bar.cpython-311.pyc.1503107311616  status_bar.cpython-311.pyc.2617060986000  status_bar.cpython-311.pyc.2755736857920
src/acp/ui/interfaces/: about_interface.py  (+6 more)
src/agentchattr_control_panel.egg-info/: SOURCES.txt  entry_points.txt
tmp_codex_home/: config.toml
(+8 files in other folders)
